Edited footer link spacing in EN, changed font size in product container and fixed logo link target and footer links spacing for ZH-CN

--- a/zh-cn/styles.css
+++ b/zh-cn/styles.css
@@ -101,7 +101,7 @@ body {
 .products-container ul li,
 .products-container ul li a {
   color: rgb(35, 170, 226);
-  font-size: 13px;
+  font-size: 15px;
 }
 
 .products-container ul li {
